// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chore Form Renders a new chore 1`] = `
<div
  className="chore-form"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <FormQuestion
      currentQuestionId="title"
      error={false}
      id="title"
      label="What is the name of this chore?"
      noLabel={false}
    >
      <Input
        className=""
        id="title"
        max={null}
        maxLength={null}
        min={null}
        name={null}
        onChange={[Function]}
        onClick={null}
        pattern={null}
        placeholder=""
        type="text"
        value=""
      />
    </FormQuestion>
    <FormQuestion
      currentQuestionId="title"
      error={false}
      id="frequency"
      label="How often do you need to do this chore?"
      noLabel={true}
    >
      <label
        className="form__option"
      >
        <div
          className="form__row"
        >
          <Input
            checked={true}
            name="frequency-type"
            onChange={[Function]}
            value="with-regularity"
          />
          <span
            className="form__row-item"
          >
            Every 
          </span>
          <Input
            className="form__row-item"
            id="frequency"
            max={365}
            maxLength={3}
            min={1}
            name={null}
            onChange={[Function]}
            onClick={[Function]}
            pattern="[0-9]*"
            placeholder=""
            type="number"
            value={7}
          />
          <span
            className="form__row-item"
          >
            days
          </span>
        </div>
      </label>
      <label
        className="form__option"
      >
        <div
          className="form__row"
        >
          <Input
            checked={false}
            name="frequency-type"
            onChange={[Function]}
            value="as-and-when"
          />
          <span
            className="form__row-item"
          >
            Whenever it needs doing
          </span>
        </div>
      </label>
    </FormQuestion>
    <FormQuestion
      currentQuestionId="title"
      error={false}
      id="pointsPerTime"
      label="How many points should this chore be worth?"
      noLabel={false}
    >
      <Input
        className=""
        id="pointsPerTime"
        max={200}
        maxLength={3}
        min={1}
        name={null}
        onChange={[Function]}
        onClick={null}
        pattern="[0-9]*"
        placeholder=""
        type="number"
        value={10}
      />
    </FormQuestion>
    <FormQuestion
      currentQuestionId="title"
      error={false}
      id="canBePaused"
      label="Should this chore pause when you go on holiday?"
      noLabel={true}
    >
      <label
        className="form__option"
      >
        <div
          className="form__row"
        >
          <Input
            checked={false}
            name="affected-by-holiday"
            onChange={[Function]}
            value="yes"
          />
          <span
            className="form__row-item"
          >
            Yes
          </span>
        </div>
      </label>
      <label
        className="form__option"
      >
        <div
          className="form__row"
        >
          <Input
            checked={true}
            name="affected-by-holiday"
            onChange={[Function]}
            value="no"
          />
          <span
            className="form__row-item"
          >
            No
          </span>
        </div>
      </label>
    </FormQuestion>
    <FormQuestion
      currentQuestionId="title"
      error={false}
      id="lastDone"
      label="When was this chore last done?"
      noLabel={false}
    >
      <Input
        className=""
        id="doneDate"
        max="2018-02-18"
        maxLength={null}
        min={null}
        name={null}
        onChange={[Function]}
        onClick={null}
        pattern={null}
        placeholder=""
        type="date"
        value="2018-02-18"
      />
    </FormQuestion>
    <FormQuestion
      currentQuestionId="title"
      error={false}
      id="forgotToLog"
      label="When did you do this chore?"
      noLabel={false}
    >
      <Input
        className=""
        id="doneDate"
        max="2018-02-18"
        maxLength={null}
        min={null}
        name={null}
        onChange={[Function]}
        onClick={null}
        pattern={null}
        placeholder=""
        type="datetime-local"
        value="2018-02-18T01:00"
      />
    </FormQuestion>
    <div
      className="form__button-holder"
    >
      <Button
        disabled={false}
        onClick={null}
        to="/chores"
        type="button"
        variant="secondary"
      >
        Cancel
      </Button>
      <Button
        disabled={false}
        onClick={[Function]}
        to={null}
        type="button"
        variant={null}
      >
        Continue
      </Button>
    </div>
  </form>
</div>
`;

exports[`Chore Form Renders a specified question 1`] = `
<div
  className="chore-form"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <FormQuestion
      currentQuestionId="forgotToLog"
      error={false}
      id="title"
      label="What is the name of this chore?"
      noLabel={false}
    >
      <Input
        className=""
        id="title"
        max={null}
        maxLength={null}
        min={null}
        name={null}
        onChange={[Function]}
        onClick={null}
        pattern={null}
        placeholder=""
        type="text"
        value="Test Chore"
      />
    </FormQuestion>
    <FormQuestion
      currentQuestionId="forgotToLog"
      error={false}
      id="frequency"
      label="How often do you need to do this chore?"
      noLabel={true}
    >
      <label
        className="form__option"
      >
        <div
          className="form__row"
        >
          <Input
            checked={true}
            name="frequency-type"
            onChange={[Function]}
            value="with-regularity"
          />
          <span
            className="form__row-item"
          >
            Every 
          </span>
          <Input
            className="form__row-item"
            id="frequency"
            max={365}
            maxLength={3}
            min={1}
            name={null}
            onChange={[Function]}
            onClick={[Function]}
            pattern="[0-9]*"
            placeholder=""
            type="number"
            value={1}
          />
          <span
            className="form__row-item"
          >
            days
          </span>
        </div>
      </label>
      <label
        className="form__option"
      >
        <div
          className="form__row"
        >
          <Input
            checked={false}
            name="frequency-type"
            onChange={[Function]}
            value="as-and-when"
          />
          <span
            className="form__row-item"
          >
            Whenever it needs doing
          </span>
        </div>
      </label>
    </FormQuestion>
    <FormQuestion
      currentQuestionId="forgotToLog"
      error={false}
      id="pointsPerTime"
      label="How many points should this chore be worth?"
      noLabel={false}
    >
      <Input
        className=""
        id="pointsPerTime"
        max={200}
        maxLength={3}
        min={1}
        name={null}
        onChange={[Function]}
        onClick={null}
        pattern="[0-9]*"
        placeholder=""
        type="number"
        value={100}
      />
    </FormQuestion>
    <FormQuestion
      currentQuestionId="forgotToLog"
      error={false}
      id="canBePaused"
      label="Should this chore pause when you go on holiday?"
      noLabel={true}
    >
      <label
        className="form__option"
      >
        <div
          className="form__row"
        >
          <Input
            checked={false}
            name="affected-by-holiday"
            onChange={[Function]}
            value="yes"
          />
          <span
            className="form__row-item"
          >
            Yes
          </span>
        </div>
      </label>
      <label
        className="form__option"
      >
        <div
          className="form__row"
        >
          <Input
            checked={true}
            name="affected-by-holiday"
            onChange={[Function]}
            value="no"
          />
          <span
            className="form__row-item"
          >
            No
          </span>
        </div>
      </label>
    </FormQuestion>
    <FormQuestion
      currentQuestionId="forgotToLog"
      error={false}
      id="lastDone"
      label="When was this chore last done?"
      noLabel={false}
    >
      <Input
        className=""
        id="doneDate"
        max="2018-02-18"
        maxLength={null}
        min={null}
        name={null}
        onChange={[Function]}
        onClick={null}
        pattern={null}
        placeholder=""
        type="date"
        value="2018-02-18"
      />
    </FormQuestion>
    <FormQuestion
      currentQuestionId="forgotToLog"
      error={false}
      id="forgotToLog"
      label="When did you do this chore?"
      noLabel={false}
    >
      <Input
        className=""
        id="doneDate"
        max="2018-02-18"
        maxLength={null}
        min={null}
        name={null}
        onChange={[Function]}
        onClick={null}
        pattern={null}
        placeholder=""
        type="datetime-local"
        value="2018-02-18T01:00"
      />
    </FormQuestion>
    <div
      className="form__button-holder"
    >
      <Button
        disabled={false}
        onClick={null}
        to="/chores"
        type="button"
        variant="secondary"
      >
        Cancel
      </Button>
      <Button
        disabled={false}
        onClick={null}
        to={null}
        type="submit"
        variant={null}
      >
        Save Chore
      </Button>
    </div>
  </form>
</div>
`;

exports[`Chore Form Renders an existing chore 1`] = `
<div
  className="chore-form"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <FormQuestion
      currentQuestionId="title"
      error={false}
      id="title"
      label="What is the name of this chore?"
      noLabel={false}
    >
      <Input
        className=""
        id="title"
        max={null}
        maxLength={null}
        min={null}
        name={null}
        onChange={[Function]}
        onClick={null}
        pattern={null}
        placeholder=""
        type="text"
        value="Test Chore"
      />
    </FormQuestion>
    <FormQuestion
      currentQuestionId="title"
      error={false}
      id="frequency"
      label="How often do you need to do this chore?"
      noLabel={true}
    >
      <label
        className="form__option"
      >
        <div
          className="form__row"
        >
          <Input
            checked={true}
            name="frequency-type"
            onChange={[Function]}
            value="with-regularity"
          />
          <span
            className="form__row-item"
          >
            Every 
          </span>
          <Input
            className="form__row-item"
            id="frequency"
            max={365}
            maxLength={3}
            min={1}
            name={null}
            onChange={[Function]}
            onClick={[Function]}
            pattern="[0-9]*"
            placeholder=""
            type="number"
            value={1}
          />
          <span
            className="form__row-item"
          >
            days
          </span>
        </div>
      </label>
      <label
        className="form__option"
      >
        <div
          className="form__row"
        >
          <Input
            checked={false}
            name="frequency-type"
            onChange={[Function]}
            value="as-and-when"
          />
          <span
            className="form__row-item"
          >
            Whenever it needs doing
          </span>
        </div>
      </label>
    </FormQuestion>
    <FormQuestion
      currentQuestionId="title"
      error={false}
      id="pointsPerTime"
      label="How many points should this chore be worth?"
      noLabel={false}
    >
      <Input
        className=""
        id="pointsPerTime"
        max={200}
        maxLength={3}
        min={1}
        name={null}
        onChange={[Function]}
        onClick={null}
        pattern="[0-9]*"
        placeholder=""
        type="number"
        value={100}
      />
    </FormQuestion>
    <FormQuestion
      currentQuestionId="title"
      error={false}
      id="canBePaused"
      label="Should this chore pause when you go on holiday?"
      noLabel={true}
    >
      <label
        className="form__option"
      >
        <div
          className="form__row"
        >
          <Input
            checked={false}
            name="affected-by-holiday"
            onChange={[Function]}
            value="yes"
          />
          <span
            className="form__row-item"
          >
            Yes
          </span>
        </div>
      </label>
      <label
        className="form__option"
      >
        <div
          className="form__row"
        >
          <Input
            checked={true}
            name="affected-by-holiday"
            onChange={[Function]}
            value="no"
          />
          <span
            className="form__row-item"
          >
            No
          </span>
        </div>
      </label>
    </FormQuestion>
    <FormQuestion
      currentQuestionId="title"
      error={false}
      id="lastDone"
      label="When was this chore last done?"
      noLabel={false}
    >
      <Input
        className=""
        id="doneDate"
        max="2018-02-18"
        maxLength={null}
        min={null}
        name={null}
        onChange={[Function]}
        onClick={null}
        pattern={null}
        placeholder=""
        type="date"
        value="2018-02-18"
      />
    </FormQuestion>
    <FormQuestion
      currentQuestionId="title"
      error={false}
      id="forgotToLog"
      label="When did you do this chore?"
      noLabel={false}
    >
      <Input
        className=""
        id="doneDate"
        max="2018-02-18"
        maxLength={null}
        min={null}
        name={null}
        onChange={[Function]}
        onClick={null}
        pattern={null}
        placeholder=""
        type="datetime-local"
        value="2018-02-18T01:00"
      />
    </FormQuestion>
    <div
      className="form__button-holder"
    >
      <Button
        disabled={false}
        onClick={null}
        to="/chores"
        type="button"
        variant="secondary"
      >
        Cancel
      </Button>
      <Button
        disabled={false}
        onClick={[Function]}
        to={null}
        type="button"
        variant={null}
      >
        Continue
      </Button>
    </div>
  </form>
</div>
`;
